20180426 add .gitignore to remove some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*/__pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+
+# mac related stuff
+.DS_Store
 
 # C extensions
 *.so
